--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^24.0.10",
     "@vitejs/plugin-vue": "^6.0.0",
+    "typescript": "^5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
   },
